syntax = "proto3";

package go.micro.srv.notes;

service Notes {
	rpc Create(CreateNoteRequest) returns (CreateNoteResponse);
	rpc Update(stream UpdateNoteRequest) returns (UpdateNoteResponse);
	rpc Delete(DeleteNoteRequest) returns (DeleteNoteResponse);
	rpc List(ListNotesRequest) returns (ListNotesResponse);
}

message Note {
	string id = 1;
	int64 created = 2;
	string title = 3;
	string text = 4;
}

message CreateNoteRequest {
	Note note = 1;
}

message CreateNoteResponse {
	Note note = 1;
}

message UpdateNoteRequest {
	Note note = 1;
}

message UpdateNoteResponse {}

message DeleteNoteRequest {
	Note note = 1;
}

message DeleteNoteResponse {}

message ListNotesRequest {}

message ListNotesResponse {
	repeated Note notes = 1;
}